--- a/Application/Extra/View/add_poster.html
+++ b/Application/Extra/View/add_poster.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="<?php echo CSS_PATH;?>/common.css">
     <link rel="stylesheet" href="<?php echo CSS_PATH;?>/tableV1.css">
+    <link rel="stylesheet" href="<?php echo CSS_PATH;?>/date/dateV2.css">
     <script type="text/javascript" src="<?php echo JS_PATH;?>/jquery-3.0.0/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="<?php echo JS_PATH;?>/menu.js"></script>
-    <script type="text/javascript" src="<?php echo JS_PATH;?>/date/dateV1.js"></script>
+    <script type="text/javascript" src="<?php echo JS_PATH;?>/date/dateV2.js"></script>
 </head>
 <body>
 <div class="main_content_html">
@@ -34,7 +35,24 @@
                 </tr>
                 <tr>
                     <td>广告投放开始时间：</td>
-                    <td><input type="text" class="date" data-default="1472797260" name="info[start_time]" value="" readonly/></td>
+                    <td>
+                        <div class="date_select">
+                            <input type="text" name="info[start_time]" value="{$start_time}" hidden>
+                            <ul class="date">
+                                <li class="data date_year">2016</li>
+                                <li class="middle">-</li>
+                                <li class="data date_month">8</li>
+                                <li class="middle">-</li>
+                                <li class="data date_day">30</li>
+                                <li class="middle"></li>
+                                <li class="data date_hour">15</li>
+                                <li class="middle">:</li>
+                                <li class="data date_minute">56</li>
+                                <li class="middle">:</li>
+                                <li class="data date_second">59</li>
+                            </ul>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <td>广告投放结束时间：</td>
