--- a/Public/css/date/dateV1.css
+++ b/Public/css/date/dateV1.css
@@ -2,23 +2,97 @@
     margin: 0 auto;
     padding: 0;
     width: 250px;
-    height: 250px;
+    height: 260px;
     position: fixed;
     background: white;
     border: 2px #996699 solid;
     text-align: center;
+    font-family: "黑体";
+}
+.date_select_div .date_select_div_head{
+    margin: 2px auto;
+    padding: 0;
+    width: 246px;
+    height: 35px;
+    color: ghostwhite;
+    border: 0;
+    text-align: center;
+    font-size: 21px;
+    line-height: 35px;
+}
+.date_select_div_head_year{
+    width: 122px;
+    background-color: ghostwhite;
+    border: 2px #996699 solid;
+    position:absolute;
+    top:-75px;
+}
+.date_select_div_head_month{
+    width: 122px;
+    background-color: ghostwhite;
+    border: 2px #996699 solid;
+    position:absolute;
+    top:-75px;
+}
+.date_select_div_head_left{
+    width: 122px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    float: left;
+    background-color: #996699;
+}
+.date_select_div_head_right{
+    width: 122px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    float: right;
+    background-color: #996699;
+}
+.date_select_div .date_select_div_body{
+    margin: 2px auto;
+    padding: 5px 0;
+    width: 246px;
+    background-color: #996699;
+    color: ghostwhite;
+    border: 0;
+    text-align: center;
+}
+.date_select_div .date_select_div_footer{
+    margin: 2px auto;
+    padding: 0;
+    width: 246px;
+    height: 21px;
+    background-color: #996699;
+    color: ghostwhite;
+    border: 0;
+    text-align: center;
 }
 
-.date_select_div ul{
-    width: 250px;
+
+
+
+
+
+
+.date_select_div_body ul{
+    width: 246px;
+    height: 30px;
     margin: 0 auto;
     padding: 0;
 }
+.date_select_div_body .ul_0{
+    height: 35px;
+}
 
-.date_select_div ul li{
-    margin: 0 auto;
-    padding: 0;
-    width: 33px;
-    border: 1px #996699 solid;
+.date_select_div_body ul li{
+    width: 32px;
+    height: 100%;
+    border: 1px white solid;
     display: inline-block;
+    line-height: 30px;
+}
+.date_select_div_body .not_this_month{
+    color: #9999cc;
 }
