--- a/Application/Extra/View/add_poster.html
+++ b/Application/Extra/View/add_poster.html
@@ -35,28 +35,11 @@
                 </tr>
                 <tr>
                     <td>广告投放开始时间：</td>
-                    <td>
-                        <div class="date_select">
-                            <input type="text" name="info[start_time]" value="{$start_time}" hidden>
-                            <ul class="date">
-                                <li class="data date_year">2016</li>
-                                <li class="middle">-</li>
-                                <li class="data date_month">8</li>
-                                <li class="middle">-</li>
-                                <li class="data date_day">30</li>
-                                <li class="middle"></li>
-                                <li class="data date_hour">15</li>
-                                <li class="middle">:</li>
-                                <li class="data date_minute">56</li>
-                                <li class="middle">:</li>
-                                <li class="data date_second">59</li>
-                            </ul>
-                        </div>
-                    </td>
+                    <td>{$start_time}</td>
                 </tr>
                 <tr>
                     <td>广告投放结束时间：</td>
-                    <td><input type="text" class="date" data-default="1472799999" name="info[start_time]" value="" readonly/></td>
+                    <td>{$end_time}</td>
                 </tr>
                 <tr>
                     <td>是否显示：</td>
